2006-09-29  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-compose-with-semi): Handle types other
	than text/html as well.

2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-mml): Treat source as binary
	data for images (we will probably have to do so for some more types);
	pass content-type argument to MML.

2006-09-28  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-mail-user-agents): Add mew-user-agent.

	* w3m-mail.el (top): Autoload w3m-mail-compose-with-mew
	(w3m-mail-user-agent-compose-function-alist): Add mew-user-agent.
	(w3m-mail-compose-with-mml): Add `content-type' argument
	(w3m-mail-compose-with-semi): Ditto.
	(w3m-mail): Handle `content-type' and `about://header/'.

	* mew-w3m.el (w3m-mail-compose-with-mew): New function.
	Add `content-type' argument and handle it.

2006-09-28  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
	wl-user-agent.
	(w3m-mail-compose-with-semi): New function.

	* w3m.el (w3m-mail-user-agents): Add wl-user-agent.

2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-coding-system-to-mime-charset): New function.

	* w3m-mail.el (w3m-mail-compose-with-mml): Bind gnus-newsgroup-name
	to nil while composing mail if gnus-user-agent is used instead of
	removing X-Draft-From header.
	(w3m-mail): Use w3m-coding-system-to-mime-charset.

2006-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-mml): Remove X-Draft-From
	header; make charset argument a string.
	(w3m-mail): Make charset argument to be passed to composer a symbol.

2006-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el: New file.

	* w3m.el: Autoload w3m-mail.
	(w3m-mail-user-agents): New variable.
	(w3m-menubar): Add w3m-mail.

2006-09-26  Luca Capello  <luca@pca.it>

	* w3m-search.el (w3m-search-new-session): New command.
	(w3m-search-read-variables): Ditto.
	(w3m-search-do-search): Ditto.